package task5.dao;

public enum MaintenanceCategory {
    LOCAL_FOOD, DELIVERY_FOOD, ACCESSORIES;
}
