package task5.dao;

public enum RoomStatus {
    UNDER_REPAIR, FREE, CLEANING, BUSY
}
